@@ -86,6 +86,7 @@ Version 1.9.9+svn:
    * Fix gold carryover if loading a save created in linger mode (bug #16111)
    * Fixed: Compilation with boost 1.47 (bug #18399's patch).
    * Fixed: Compilation with the clang 2.9 compiler (bug #18399's patch).
+   * Fixed: Avoid copying of singular iterators in the whiteboard code.
 
 Version 1.9.9:
  * AI:
